--- a/index.html
+++ b/index.html
@@ -67,7 +67,9 @@
                 <li>Fucsias</li>
             </ol> 
 
-
+            <section class="herencia">
+                <h6>De quien heredare sus caracteristicas?</h6>
+            </section>
 
             <section>
                 <h1>Soy la lista del super</h1>
